--- a/releng/airootfs/etc/calamares/settings.conf
+++ b/releng/airootfs/etc/calamares/settings.conf
@@ -28,7 +28,8 @@ sequence:
   - localecfg
   - luksbootkeyfile
   - luksopenswaphookcfg
-  - shellprocess@before
+
+#  - shellprocess@before
   - initcpiocfg
   - initcpio
   - removeuser
@@ -40,7 +41,7 @@ sequence:
   - packages
   - grubcfg
   - bootloader
-  - shellprocess@final
+#  - shellprocess@final
   - preservefiles
   - umount
 - show:
