fix removing live user

--- a/releng/airootfs/etc/calamares/modules/usersq.conf
+++ b/releng/airootfs/etc/calamares/modules/usersq.conf
@@ -44,7 +44,7 @@ allowWeakPasswords: true
 allowWeakPasswordsDefault: true
 
 user:
-  shell: /bin/fish
+  shell: /bin/bash
   forbidden_names: [ root ]
 
 hostname:
