add shell process before script calamares

--- a/releng/airootfs/etc/calamares/modules/usersq.conf
+++ b/releng/airootfs/etc/calamares/modules/usersq.conf
@@ -50,7 +50,7 @@ user:
 hostname:
   location: EtcFile
   writeHostsFile: true
-  template: "dtos-${cpu}"
+  template: "normos-${cpu}"
   forbidden_names: [ localhost ]
 
 presets:
