--- a/releng/airootfs/etc/calamares/modules/welcome.conf
+++ b/releng/airootfs/etc/calamares/modules/welcome.conf
@@ -8,7 +8,7 @@ requirements:
 
     requiredRam:        3.0
 
-    internetCheckUrl:   https://distro.tube
+    internetCheckUrl:   https:google.com		
 
     check:
         - storage
