--- a/releng/airootfs/etc/calamares/modules/shellprocess-before.conf
+++ b/releng/airootfs/etc/calamares/modules/shellprocess-before.conf
@@ -1,7 +1,7 @@
 i18n:
-     name: "Preparing your system for DTOS"
+     name: "Preparing your system for NORMOS"
 
 dontChroot: false
 timeout: 999
 script:
-    - command: "/usr/local/bin/dtos-before"
+    - command: "/usr/local/bin/normos-before"
