--- a/releng/airootfs/etc/calamares/modules/users.conf
+++ b/releng/airootfs/etc/calamares/modules/users.conf
@@ -205,7 +205,7 @@ user:
 hostname:
   location: EtcFile
   writeHostsFile: true
-  template: "dtos-${cpu}"
+  template: "normos-${cpu}"
   forbidden_names: [ localhost ]
 
 presets:
