--- a/releng/airootfs/etc/calamares/settings.conf
+++ b/releng/airootfs/etc/calamares/settings.conf
@@ -29,7 +29,7 @@ sequence:
   - luksbootkeyfile
   - luksopenswaphookcfg
 
-  - shellprocess@before
+#  - shellprocess@before
   - initcpiocfg
   - initcpio
   - removeuser
